edit creating process

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# go over each query-doc and use the previos function to get the tweets from the MongoDB\n",
-    "for query in list(query_doc.keys())[:10]:\n",
+    "# go over each query-doc and use the previous function to get the tweets from the MongoDB\n",
+    "for query in list(query_doc.keys()):\n",
     "    \n",
-    "    doc_tweets = {}\n",
+    "    doc_tweets = []\n",
     "    \n",
     "    for doc in query_doc[query]:\n",
     "        \n",
@@ -178,7 +178,9 @@
     "        # neglect the doc that don't have tweets\n",
     "        if bool(tweets):\n",
     "            \n",
-    "            doc_tweets[doc['_source']['name']] = tweets\n",
+    "            doc_tweets.append({\"name\" : doc['_source']['name'], \n",
+    "                               \"location\": doc['_source']['location'],\n",
+    "                               \"tweets\":tweets })\n",
     "    \n",
     "    # neglect the queries that don't have documents with tweets\n",
     "    if bool(doc_tweets) :\n",
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -228,12 +230,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "### build the dataframe "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +302,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +544,7 @@
        "[1918 rows x 8 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +827,7 @@
        "18               2             7.417501  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,6 +835,15 @@
    "source": [
     "data.groupby(['query', 'document']).agg({'tweet': 'count', 'replies_count': 'sum', 'likes_count': 'sum'\n",
     "                                        ,'retweets_count': 'sum', 'elasticsearch_score': 'first'}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data.to_csv('/Users/emadarmiti/Desktop/cap-s5/places_ranking/training_data.csv')"
    ]
   },
   {
